--- a/djangojokes/templates/_base.html
+++ b/djangojokes/templates/_base.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- ADD BOOTSTRAP CSS FROM https://getbootstrap.com/ -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-<!-- ADD FONT AWESOME FROM https://fontawesome.com/ -->
+<script src="https://kit.fontawesome.com/93b32eea03.js" crossorigin="anonymous"></script>
 <title>{% block title %}{% endblock %} | Django Jokes</title>
 </head>
 <body>
