--- a/templates/_base.html
+++ b/templates/_base.html
@@ -60,7 +60,7 @@
 </main>
 <footer class="fixed-bottom bg-light row">
     <div class="col">
-      <div class="float-right m-1 mr-2">Copyright &copy; 2020 Django Jokes.</div>
+      <div class="float-right m-1 mr-2">Copyright &copy; 2024 RvdM & Django Jokes.</div>
       <nav>
         <ul class="nav">
           <li class="nav-item"><a class="nav-link" href="{% url 'pages:about-us' %}">About</a></li>
