--- a/templates/jokes/joke_list.html
+++ b/templates/jokes/joke_list.html
@@ -3,8 +3,10 @@
 {% block title %}Jokes{% endblock %}
 
 {% block main %}
-    <a class="btn btn-success btn-sm float-right" href="{% url 'jokes:create' %}"> + New Joke
-    </a>
+    <div class="text-end">
+        <a class="btn btn-success btn-sm float-right" href="{% url 'jokes:create' %}"> + New Joke
+        </a>
+    </div>
     <h2>Jokes</h2>
     <ul class="list-group list-group-flush mb-3">
         {% for joke in joke_list %}
