--- a/templates/_base.html
+++ b/templates/_base.html
@@ -66,7 +66,7 @@
       <nav>
         <ul class="nav">
           <li class="nav-item"><a class="nav-link" href="{% url 'pages:about-us' %}">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'pages:contact' %}">Contact</a></li>
         </ul>
       </nav>
     </div>
