Added about-us to Me in header

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="#">Log in</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" 
+          <a class="nav-link dropdown-toggle" href="{% url 'pages:about-us' %}" id="navbarDropdown" 
              role="button" data-toggle="dropdown" aria-haspopup="true"
              aria-expanded="false">
             Me
