--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,6 +9,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/93b32eea03.js" crossorigin="anonymous"></script>
 <title>{% block title %}{% endblock %} | Django Jokes</title>
+
+<!-- Add an icon to the tab in the web browser -->
+{% load static %}
+<link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+
 </head>
 <body>
 <header>
