--- a/templates/pages/about_us.html
+++ b/templates/pages/about_us.html
@@ -3,10 +3,12 @@
 {% block title %}About Us{% endblock %} 
 {% block main %}
     <h2>About Us</h2>
-    <p>We tell funny jokes.</p> 
+   
     
     <!-- add a picture here -->
     {% load static %}
-    <img src="{% static 'images/Foto-1967.jpg' %}" width="100" height="100" alt="My image">
+    <img src="{% static 'images/Foto-1967.jpg' %}" width="100" height="100" alt="Thats me!">
+
+    <p>We tell funny jokes.</p> 
 
 {% endblock %}
